# jvcc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/c17/: PPTokens.c  PPTokens.h
src/cli/: diagnostic.c  diagnostic.h  main.c
src/general/: DynArray.c  DynArray.h  IO.c  IO.h
tests/: test_IO.py  test_PPTokens.py  wrapper.py
